// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`display(props) renders expected snapshots 1`] = `
Object {
  "display": "inline",
}
`;

exports[`display(props) renders expected snapshots 2`] = `
Object {
  "display": "block",
}
`;
